--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,8 +26,10 @@
             "presentation": {
                 "echo": true,
                 "reveal": "always",
-                "focus": true,
-                "panel": "new"
+                "focus": false,
+                "panel": "shared",
+                "clear": true,
+                "showReuseMessage": false
             },
             "problemMatcher": [
                 "$gcc"
