--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,14 +19,14 @@ find_package(Qt5 COMPONENTS Core Widgets Gui Svg LinguistTools REQUIRED)
 
 file(GLOB_RECURSE HEADERS
     components/*.h
-    components/deprecated/*.h
+    components/private/*.h
     example/*.h
     gallery/*.h
 )
 
 file(GLOB_RECURSE SOURCES
     components/*.cpp
-    components/deprecated/*.cpp
+    components/private/*.cpp
     example/*.cpp
     gallery/*.cpp
 )
@@ -53,7 +53,7 @@ add_executable(qt-element-ui
 
 target_include_directories(qt-element-ui PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/components
-    ${CMAKE_CURRENT_SOURCE_DIR}/components/deprecated
+    ${CMAKE_CURRENT_SOURCE_DIR}/components/private
     ${CMAKE_CURRENT_SOURCE_DIR}/example
     ${CMAKE_CURRENT_SOURCE_DIR}/gallery
 )
