2025-12-31 .gitignore屏蔽.vscode文件夹 cmake增加qt6适配

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,13 +9,21 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 17)
+#set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_BUILD_TYPE Release)
 
-find_package(Qt5 COMPONENTS Core Widgets Gui Svg LinguistTools REQUIRED)
+find_package(Qt6 COMPONENTS Core Widgets Gui Svg LinguistTools QUIET)
+if(Qt6_FOUND)
+    set(QT_LIBRARIES Qt6::Core Qt6::Widgets Qt6::Gui Qt6::Svg)
+    message(STATUS "Found Qt6, using C++ latest/23")
+else()
+    find_package(Qt5 COMPONENTS Core Widgets Gui Svg LinguistTools REQUIRED)
+    set(QT_LIBRARIES Qt5::Core Qt5::Widgets Qt5::Gui Qt5::Svg)
+    message(STATUS "Qt6 not found, using Qt5 fallback")
+endif()
 
 file(GLOB_RECURSE HEADERS
     components/*.h
@@ -64,9 +72,32 @@ target_link_libraries(qt-element-ui
     Qt5::Gui
     Qt5::Svg
 )
+target_compile_options(qt-element-uiui INTERFACE
+    # GCC
+    $<$<AND:$<CXX_COMPILER_ID:GNU>,$<CONFIG:Debug>>:-Wall -Wextra -Wpedantic -O0 -g>
+    $<$<AND:$<CXX_COMPILER_ID:GNU>,$<CONFIG:Release>>:-Wall -O3 -DNDEBUG>
 
+    # Clang
+    $<$<AND:$<CXX_COMPILER_ID:Clang>,$<CONFIG:Debug>>:-Wall -Wextra -Wpedantic -O0 -g>
+    $<$<AND:$<CXX_COMPILER_ID:Clang>,$<CONFIG:Release>>:-Wall -O3 -DNDEBUG>
+
+    # MSVC
+    $<$<AND:$<CXX_COMPILER_ID:MSVC>,$<CONFIG:Debug>>:/W4 /Od /Zi /EHsc>
+    $<$<AND:$<CXX_COMPILER_ID:MSVC>,$<CONFIG:Release>>:/O2 /DNDEBUG /EHsc>
+
+    # Clang-cl
+    $<$<AND:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_FRONTEND_VARIANT:MSVC>,$<CONFIG:Debug>>:/EHsc /Zi /W4>
+    $<$<AND:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_FRONTEND_VARIANT:MSVC>,$<CONFIG:Release>>:/EHsc /O3 /DNDEBUG>
+
+)
 if(WIN32)
     target_link_libraries(qt-element-ui gdi32 dwmapi)
 endif()
 
-qt5_add_translation(QM_FILES ${TRANSLATIONS})
+if(Qt6_FOUND)
+    # Qt6 推荐使用新的命令，它会自动处理 .ts 到 .qm 的转换
+    qt6_add_translation(QM_FILES ${TRANSLATIONS})
+else()
+    # Qt5 使用旧的命令
+    qt5_add_translation(QM_FILES ${TRANSLATIONS})
+endif()
